themes/default/css/cns.css
/* ... */
.cns-topic .cns-topic-section > div:first-child {
	background-color: {$GET,area_background};
	padding: 0.3em;
	vertical-align: middle;
}
/*{+START,CSS_MODE,desktop}*/
	.cns-topic .cns-topic-section > div:first-child {
		width: 130px;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	.cns-topic .cns-topic-section > div:first-child {
		width: 80px;
	}
/*{+END}*/
.email-body .cns-topic .cns-topic-section > div:first-child {
	width: 70px;
}

.cns-post-box .cns-topic .cns-topic-section > div {
	border: 0;
}

.cns-topic {
	/*{+START,IF,{$EQ,{$LANG},EN}}*/
		table-layout: fixed !important; /* Needed to be able to lock in overflow scrolling to individual cells */
	/*{+END}*/
}

.cns-topic .cns-forum-box-left,
.cns-post-details {
	background-color: {$GET,area_background};
	color: {$GET,box_title_text};
}
.cns-topic-post + .cns-topic-post .cns-forum-box-left,
.cns-topic-post + .cns-topic-post .cns-post-details {
	border-top-width: 15px !important;
}
.cns-topic .cns-forum-box-left, .cns-post-details, .cns-post-details a, .cns-post-details a:hover {
	color: {$GET,box_title_text} !important;
}

.cns-post-emphasis, .cns-post-personal, .cns-post-poll {
	font-size: 0.85em;
	font-weight: bold;
	text-align: center;
}

.cns-post-emphasis, div.cns-post-emphasis.cns-forum-box-left { /* Extra selector clause to give precedence over th.de-th and .cns-forum-box-left */
	background-color: {$GET,emphasis_background} !important;
	color: {$GET,emphasis_text};
}

.cns-post-personal, div.cns-post-personal.cns-forum-box-left { /* Extra selector clause to give precedence over th.de-th and .cns-forum-box-left */
	background-color: {$GET,cns_personal_post_background} !important;
	color: {$GET,cns_personal_post_text};
}

.cns-post-poll, div.cns-post-poll.cns-forum-box-left { /* Extra selector clause to give precedence over th.de-th and .cns-forum-box-left */
	background-color: {$GET,cns_polls_background} !important;
	color: {$GET,cns_polls_text};
}

.cns-topic-poll {
	border-collapse: collapse;
}

.cns-topic-poll, .cns-topic-poll td {
	text-align: right;
}

.cns-topic-poll, .cns-topic-poll th {
	text-align: left;
	width: 100%;
}

.cns-topic-poll img {
	max-width: none;
}

.cns-topic-poll-radio, .cns-topic-poll-result {
	text-align: right;
	width: 50%;
	padding: 0.5em;
}

.cns-topic-poll-result-column2 {
	padding: 0.5em;
}

.cns-topic-poll-result-column2 * {
	vertical-align: middle;
}

.cns-topic-poll-relative {
	position: relative;
}

.cns-topic-poll-progress {
	position: absolute;
	top: 5%;
	left: 0;
	width: 0;
	height: 90%;
	background-color: {$GET,cns_polls_background} !important;
}

.cns-topic-poster-title {
	font-size: 0.8em;
	margin-top: 0.5em;
}

.cns-topic-poster-rank-images {
	margin-top: 1.5em;
}

.cns-guest-poster {
	font-weight: bold;
}

.cns-post-details {
	text-align: left;
	padding: 0.6em 0.2em !important;
	overflow: auto;
}

.cns-rank-image img {
	max-width: 100%;
	height: auto;
}

.cns-post-details-date {
	float: left;
	padding-left: 0.5em;
}

.cns-post-details-rating {
	float: left;
	white-space: nowrap;
}
/*{+START,CSS_MODE,desktop}*/
	.cns-post-details-rating {
		padding-left: 2em;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	.cns-post-details-rating {
		padding-left: 0.5em;
	}
/*{+END}*/

.cns-post-details-unvalidated {
	float: left;
	padding-left: 1em;
}

.cns-post-details-grapple {
	float: right;
	padding-right: 1em;
}

/*{+START,CSS_MODE,desktop}*/
	.cns-topic-post-member-details {
		padding: 0.5em;
	}
/*{+END}*/

.cns-topic-post-member-details {
	text-align: center;
	vertical-align: top !important;
}
/*{+START,CSS_MODE,mobile}*/
	.cns-topic-post-member-details {
		width: 80px;
	}
/*{+END}*/

.cns-topic-poster-name {
	text-align: center;
	display: inline-block;
	margin: 1em 0;
	max-width: 100%;
}
/*{+START,CSS_MODE,desktop}*/
	.cns-topic-poster-name {
		overflow-wrap: break-word;
	}
/*{+END}*/

.cns-topic-post-avatar {
	margin: 0 auto;
}

.cns-topic-post-avatar:not([width]):not([height]) {
	max-width: 100%;
	height: auto;
}

.cns-post-main-column {
	background-color: {$GET,area_faded_background};
	padding: 0.5em;
	vertical-align: top;
}

/*{+START,CSS_MODE,desktop}*/
	.cns-post-main-column.buttons-group {
		padding: 1em;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	.cns-post-main-column.buttons-group {
		padding: 0.5em;
		text-align: center;
	}
/*{+END}*/
.cns-post-main-column .buttons-group {
	margin: 0;
	padding: 0;
}

.cns-topic-post-area {
	padding: 0.5em;
	line-height: 1.6em;
}
.cns-topic-post-area #map-canvas img { /*some exceptions may need defining for the above*/
	max-width: none;
}

.cns-topic-post-area > h2,
.cns-topic-post-area > h3 {
	margin-top: 0;
}

hr.cns-sig-barrier {
	border-top: 1px solid {$GET,divider_line};
	border-right: 0;
	border-bottom: 0;
	border-left: 0;
	height: 0;
	width: 40%;
	background-color: {$GET,divider_line};
	margin: 1em 1em 1em 0;
}
/*{+START,CSS_MODE,mobile}*/
	hr.cns-sig-barrier {
		display: none;
	}
/*{+END}*/

.cns-post-emphasis {
	text-align: center;
}

.cns-post-back-to-top {
	padding: 0.5em;
	text-align: right;
}

.cns-post-back-to-top img {
	vertical-align: middle;
	margin-left: 0.25em;
}

.cns-topic-control-functions {
	margin: 0.25em 0;
}
/*{+START,CSS_MODE,desktop}*/
	.cns-topic-control-functions {
		font-size: 0.9em;
	}
/*{+END}*/

.cns-topic-control-functions > .box-inner {
	margin: 0;
}

.cns-topic-control-functions form {
	display: inline-flex;
	padding: 10px;
}

.cns-topic-control-functions label {
	margin-bottom: 0;
	align-self: center;
	padding-right: 1em;
}

.cns-topic-control-functions select {
	max-width: 10.5em;
}

/*{+START,CSS_MODE,mobile}*/
	.cns-topic-control-functions form {
		width: 100%;
	}
	.cns-topic-control-functions label {
		min-width: 8.5em;
		display: inline-block;
	}
	.cns-topic-control-functions select {
		width: 9em;
		max-width: none;
	}
	.cns-topic-control-functions input {
		width: 5em;
	}
/*{+END}*/

.cns-topic-actions {
	margin: 1em 0;
}

.cns-topic-actions form {
	display: inline-flex;
	margin-right: 1em;
}
/* ... */

